Fixes #1374 - i18n for school login
Fixes #1374

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -132,6 +132,9 @@
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?":"Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?",
   "Library": "Library",
   "Literacy": "Literacy",
+  "Login": "Login",
+  "Login to your school": "Login to your school",
+  "Remember logged in user": "Remember logged in user",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?":"Leela has 8 pencils. She loses 7 of them. How many pencils does Leela have left?", 
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?":"Leela is 9 years old. Her sister Julie is 6 years old. How much older is Leela than her sister Julie?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?":"Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?",
