--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -136,6 +136,9 @@
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?":"लीना के पास 12 किताबें हैं।\nवह अपनी कक्षा की लाइब्रेरी में  8 किताबें दान करती हैं।\nलीना के पास कितनी किताबें बाकि हैं?",
   "Library": "संग्रह",
   "Literacy": "हिन्दी",
+  "Login": "लॉग इन करें",
+  "Login to your school": "अपने स्कूल में लॉगिन करें",
+  "Remember logged in user": "लॉग इन उपयोगकर्ता याद रखें",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?":"लतिका के पास 8 पेंसिल हैं।\nवह उनमें से 7 पेंसिल खो देती है।\nलतिका के पास कितने पेंसिल बचे हैं?",
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?":"लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?":"मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
