--- a/assets/resources/lang/mg/i18n.json
+++ b/assets/resources/lang/mg/i18n.json
@@ -128,7 +128,7 @@
   "Choose Your Language":"Fidio ny fiteninao",
   "Class :":"Kilasy :",
   "circle":"boribory",
-  "Click x1 times on number x2!":"Tsindrio indray mandeha ny isa 2",
+  "Click x1 times on number x2!":"Tsindrio x1 ny isa x2",
   "cone":" borobory kitso loha",
   "Confirm":"Hamafiso",
   "Contact Us":"Manorata aminay",
@@ -381,6 +381,7 @@
   "seven":"Fito",
   "Shante picked 6 mangos from a tree. He put an equal number of mangos into 3 boxes. How many mangos did he put in each box?":"",
   "Shape Order":"Filaharan’ny kisary",
+  "Shape Tractor": "Endrika",
   "Shape Pattern":"Endrikin'ny kisary",
   "Shape Sequence":"Tambantsehon'ny kisary",
   "Shape Series":"Sokajin'ny kisary",
@@ -535,61 +536,59 @@
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?":"Manana hajia ianao. Nomen'ny rahalahinao hajia 6 ianao. Amin'izao, manana hajia 10 ianao. Firy ny isan'ny hajia nanombohanao ?",
   "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?":"Manana fanomezana tamin'ny tsingeritaona nahaterahany Zach. 9 avy amin'ny fianakaviany ary ny ambiny avy amin'ny namany. Firy ny isan'ny fanomezana avy amin'ny namany ?",
   "zero":"aotra",
-  "1- 20":"Iray ka hatramin'ny roapolo",
-  "100-300":"Zato ka hatramin'ny telonjato",
-  "100-500":"Zato ka hatramin'ny dimanjato",
-  "200-300":"Roanjato ka hatramin'ny telonjato",
-  "21-30":"Iraika ambin’ny roapolo ka hatramin'ny telopolo",
-  "300-500":"Telomjato ka hatramin'ny dimanjato",
-  "300-600":"Telonjato ka hatramin'ny eninjato",
-  "31 - 40":"Iraika ambin’ny telopolo ka hatramin'ny efapolo",
-  "41 - 50":"Iraika ambin’ny efapolo ka hatramin'ny dimampolo",
-  "71 - 80":"Iraika ambin’ny fitopolo ka hatramin'ny valopolo",
-  "1":"Iray, Isa",
-  "10":"Folo",
-  "10's Subtraction":"Ampolony",
-  "100 - 200":"Zato ka hatramin'ny roajato",
-  "100 -150":"Zato ka hatramin'ny dimampolo ambin’ny zato",
-  "100-999":"Zato ka hatramin'ny sivy ambin’ny sivifolo sy sivijato",
-  "11":"Iraika ambin'ny folo",	
-  "12":"Roa ambin'ny folo",	
-  "13":"Telo ambin'ny folo",	
-  "14":"Efatra ambin'ny folo",	
-  "15":"Dimy ambin'ny folo",	
-  "150 -200":"Dimampolo ambin’ny zato ka hatramin'ny roajato",	
-  "16":"Enina ambin'ny folo",	
-  "17":"Fito ambin'ny folo",	
-  "18":"Valo ambin'ny folo",	
-  "19":"Sivy ambin'ny folo",	
-  "2":"Roa",	
-  "20":"Roapolo",	
-  "20 - 99":"Roapolo ka hatramin'ny sivy ambin’ny sivifolo",	
-  "200 - 250":"Roajato ka hatramin'ny dimampolo ambin’ny roajato",	
-  "200-700":"Roajato ka hatramin'ny fitonjato",	
-  "250 - 300":"Dimampolo ambin’ny roajato ka hatramin'ny telojato",	
-  "2D & 3D Shapes":"Endrika, Kisary 2D sy 3D",	
-  "3":"Telo",	
-  "3 Digit Numbers":"Telo Isa Laharana",	
-  "300 - 400":"Telojato ka hatramin'ny efajato",	
-  "300 - 900":"Telojato ka hatramin'ny sivijato",		
-  "4":"Efatra",	
-  "400 - 500":"Efajato ka hatramin'ny dimanjato",	
-  "5":"Dimy",	
-  "500 - 600":"Dimanjato ka hatramin'ny enijato",	
-  "500 - 900":"Dimanjato ka hatramin'ny sivijato",	
-  "500-700":"Dimanjato ka hatramin'ny fitojato",	
-  "51 - 60":"Iraika ambin’ny dimapolo ka hatramin'ny enipolo",	
-  "6":"Enina",	
-  "600 - 700":"Enijato ka hatramin'ny fitonjato",	
-  "61 - 70":"Iraika ambin’ny enipolo ka hatramin'ny fitopolo",	
-  "7":"Fito",	
-  "700 - 800":"Fitonjato ka hatramin'ny valonjato",	
-  "700-900":"Fitonjato ka hatramin'ny sivijato",	
-  "8":"Valo",	
-  "800 - 900":"Valojato ka hatramin'ny sivijato",	
-  "800-999":"Valojato ka hatramin'ny sivy ambin’ny sivifolo sy sivijato",	
-  "81 - 90":"Iraika ambin’ny valopolo ka hatramin'ny sivifolo",	
-  "9":"Sivy",	
-  "900 - 999":"Sivijato ka hatramin'ny sivy ambin’ny sivifolo sy sivijato",	
-  "91 - 100":"Iraika ambin’ny sivifolo ka hatramin'ny zato"
+  "Jungle": "anaty ala",
+  "Beach": "Beach",
+  "City": "Tanàna",
+  "Desert": "EFITRA",
+  "Farm": "toeram-pambolena",
+  "Garden": "ZARIDAINA",
+  "PlayGround": "tokotanin-tsekoly",
+  "Sea": "RANOMASINA",
+  "Sky": "Sky",
+  "Snow": "oram-panala",
+  "Platformer Game": "Lalao platformer",
+  "Balloon": "Balaonina",
+  "Box": "efajoro",
+  "Egg": "atody",
+  "Flower": "Voninkazo",
+  "Heart": "am-po",
+  "House": "Trano",
+  "Moon": "Volana",
+  "Star": "Kintana",
+  "Watermelon": "Voajabo",
+  "Trophy": "amboara",
+  "Dog": "amboa",
+  "Fish": "TRONDRO",
+  "Arrow": "Zana-tsipìka",
+  "drawshape": "hantsaka",
+  "Bird": "Vorona",
+  "Lizard": "Androngo",
+  "Mouse": "voalavo",
+  "Turtle": "sokatra",
+  "Ball and Dog": "Baolina sy alika",
+  "Meerkats": "Meerkats",
+  "Insects": "Bibikely",
+  "Cat and Butterfly": "Saka sy lolo",
+  "Penguin": "vorondrano",
+  "Rabbit and Flower": "Bitro sy voninkazo",
+  "Gazelle": "gazela",
+  "Goat": "Goat",
+  "Pig": "kisoa",
+  "Zebra": "Zebra",
+  "More Birds": "Vorona bebe kokoa",
+  "Elephants": "elefanta",
+  "Eagle": "Eagle",
+  "Hyena": "Hyena",
+  "Cow": "ombivavy",
+  "Squirrel": "Squirrel",
+  "Monkeys and Crocodile": "Gidro sy voay",
+  "Picture Board": "Sary Birao",
+  "Beginner": "mpanao voalohany",
+  "Basic": "Fototra",
+  "Simple": "tsotra",
+  "Easy": "Mora",
+  "Intermediate": "kafa",
+  "Difficult": "sarotra",
+  "Hard": "Mafy",
+  "Matching Card": "Karatra fampifandraisana"
 }
