--- a/assets/resources/lang/mg/i18n.json
+++ b/assets/resources/lang/mg/i18n.json
@@ -528,6 +528,13 @@
   "WhatsApp":"WhatsApp",
   "Which group is bigger?":"Iza no vondrona lehibe kokoa?",
   "Which is a circle?":"Iza no faribolana?",
+  "Which is a hexagon?":"Iza no enin-joro?",
+  "Which is a parallelogram?":"Iza no efamira roa zodafy?",
+  "Which is a pentagon?":"Iza no pentagone?",
+  "Which is a rectangle?":"Iza no mahitsizoro?",
+  "Which is a square?":"Iza no efamira?",
+  "Which is a trapezoid?":"Iza no manjary efajoro?",
+  "Which is a triangle?":"Iza no telolafy?",
   "Which is the biggest?":"Iza no lehibe indrindra?",
   "Write here":"Sorato eto",
   "Yesterday":"Omaly, nanana lasakam-bary 7 ny magazay iray. Androany, manana lasakam-bariny 2 ilay magazay. Firy ny isan'ny lasakam-bary lafony?",
@@ -546,7 +553,7 @@
   "Sea": "RANOMASINA",
   "Sky": "Sky",
   "Snow": "oram-panala",
-  "Platformer Game": "Lalao platformer",
+  "Platformer Game": "Mihazakazaka",
   "Balloon": "Balaonina",
   "Box": "efajoro",
   "Egg": "atody",
