--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -82,7 +82,7 @@
     "Error downloading content. Please connect to internet and try again": "ವಿಷಯವನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ. ದಯವಿಟ್ಟು ಇಂಟರ್ನೆಟ್ಗೆ ಸಂಪರ್ಕಪಡಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
     "EXIT ?": "ನಿರ್ಗಮಿಸಿ?",
     "Facebook": "ಫೇಸ್ಬುಕ್",
-    "Featured":"ಮುಖ್ಯಾಂಶವಾದ",
+    "Featured":"ಮುಖ್ಯಾಂಶ",
     "fish": "ಮೀನು",
     "five": "ಐದು",
     "Follow Us": "ನಮ್ಮನ್ನು ಅನುಸರಿಸಿ",
