Resized images & some transations

--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -54,7 +54,7 @@
     "Choose Your Language": "ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆರಿಸಿ",
     "Class  :": "ವರ್ಗ:",
     "circle": "ವೃತ್ತ",
-    "Click x1 times on number x2!": "X2 x2 ನಲ್ಲಿ X1 ಬಾರಿ ಕ್ಲಿಕ್ ಮಾಡಿ!",
+    "Click x1 times on number x2!": "x2 ನಲ್ಲಿ x1 ಬಾರಿ ಕ್ಲಿಕ್ ಮಾಡಿ!",
     "cone": "ಕೋನ್",
     "Confirm": "ದೃಢೀಕರಿಸಿ",
     "Contact Us": "ನಮ್ಮನ್ನು ಸಂಪರ್ಕಿಸಿ",
