--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -80,6 +80,7 @@
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?":"Harish makes 5 paper airplanes. Naresh makes 14 paper airplanes. How many fewer paper airplanes does Harish make than Naresh?",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
+  "Exit Game": "Exit Game",
   "Facebook": "Facebook",
   "fish":"fish",
   "five": "five",
@@ -268,6 +269,7 @@
   "verify": "verify",  
   "verifying...": "verifying...",
   "Visit": "Visit",
+  "Watch Help Video": "Watch Help Video",
   "We sent an OTP to verify your number.": "We sent an OTP to verify your number.",
   "What is your name?": "What is your name?",
   "What's your age?": "What's your age?",
