--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -83,6 +83,7 @@
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?":"अर्जुन 5 पेपर के हवाई जहाज बनाता है।\nनयना 14 पेपर के हवाई जहाज बनाती है।\nअर्जुन नयना की तुलना में कितने कम हवाई जहाज बनाता है?",
   "Error downloading content. Please connect to internet and try again": "सामग्री डाउनलोड करने में त्रुटि। कृपया इंटरनेट से कनेक्ट करें और पुनः प्रयास करें",
   "EXIT ?": "बाहर जाएं ?",
+  "Exit Game":"खेल से बाहर जाएं",
   "Facebook": "फ़ेसबुक",
   "fish":"मछली",
   "five": "पांच",
@@ -271,7 +272,8 @@
   "verified": "सत्यापित",
   "verify": "सत्यापित करें",
   "verifying...": "पुष्टि करने ...",
-  "Visit": "वेबसाइट जायें",  
+  "Visit": "वेबसाइट जायें", 
+  "Watch Help Video": "सहायता वीडियो देखें",
   "We sent an OTP to verify your number.": "हमने आपका नंबर सत्यापित करने के लिए एक OTP भेजा है।",
   "What is your name?": "तुम्हारा नाम क्या है?",
   "What's your age?": "तुम्हारी उम्र क्या है?",
