--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -81,6 +81,7 @@
     "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "ಅರ್ನೆಸ್ಟ್ 5 ಕಾಗದದ ವಿಮಾನಗಳನ್ನು ಮಾಡುತ್ತಾನೆ. ನಿಕೋಲ್ 14 ಕಾಗದದ ವಿಮಾನಗಳನ್ನು ಮಾಡುತ್ತಾನೆ. ನಿಕೋಲ್ಗಿಂತ ಎಷ್ಟು ಕಡಿಮೆ ಕಾಗದದ ವಿಮಾನಗಳು ಎರ್ನೆಸ್ಟ್ ಮಾಡುತ್ತಾನೆ?",
     "Error downloading content. Please connect to internet and try again": "ವಿಷಯವನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ. ದಯವಿಟ್ಟು ಇಂಟರ್ನೆಟ್ಗೆ ಸಂಪರ್ಕಪಡಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
     "EXIT ?": "ನಿರ್ಗಮಿಸಿ?",
+    "Exit Game":"ಆಟದಿಂದ ನಿರ್ಗಮಿಸಿ",
     "Facebook": "ಫೇಸ್ಬುಕ್",
     "Featured":"ಮುಖ್ಯಾಂಶ",
     "fish": "ಮೀನು",
@@ -270,6 +271,7 @@
     "verify": "ಪರಿಶೀಲಿಸು",
     "verifying...": "ಪರಿಶೀಲಿಸಲಾಗುತ್ತಿದೆ ...",
     "Visit": "ಭೇಟಿ",
+    "Watch Help Video":"ಸಹಾಯ ವೀಡಿಯೊ ವೀಕ್ಷಿಸಿ",
     "We sent an OTP to verify your number.": "ನಿಮ್ಮ ಸಂಖ್ಯೆಯನ್ನು ಪರಿಶೀಲಿಸಲು ನಾವು OTP ಅನ್ನು ಕಳುಹಿಸಿದ್ದೇವೆ.",
     "What is your name?": "ನಿನ್ನ ಹೆಸರೇನು?",
     "What's your age?": "ನಿನ್ನ ವಯಸ್ಸೇನು?",
