School mode remove hw

--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -69,7 +69,7 @@
     "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "ಡೀಯಾನಾಗೆ ಸೀತಾಗಿಂತ 5 ಜಾಸ್ತಿ ಪಧಬಂಧಗಳಿವೆ .ಸೀತಾಗೆ 3 ಪದಬಂಧಗಲಿದ್ದರೆ  ಡೀಯಾನಾಗೆ ಎಷ್ಟು ಪಧಬಂಧಗಳಿವೆ?",
     "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ 11 ಮಾವಿನಹಣ್ಣುಗಳಿವೆ. ಡಿಯಾಗೋ ತನ್ನ ಸಹೋದರಿಗೆ 4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು ನೀಡುತ್ತಾಳೆ ಈಗ ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳಿವೆ ?",
     "Division": "ವಿಭಜನೆ",
-    "Digital Skills": "ಡಿಜಿಟಲ್ ಕೌಶಲ್ಯಗಳು",
+    "Digital Skills": "ಡಿಜಿಟಲ್",
     "Done": "ಮುಗಿದಿದೆ",
     "Do you want to open now?": "ನೀವು ಈಗ ತೆರೆಯಲು ಬಯಸುವಿರಾ?",
     "eggs": "ಮೊಟ್ಟೆಗಳು",
