--- a/scripts/python/generate_random_scores.ipynb
+++ b/scripts/python/generate_random_scores.ipynb
@@ -3,19 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
     "import random\n",
     "import json"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "genders = [\"Male\", \"Female\", \"Unknown\"]\n",
     "ages = [3,4,5,6,7,8]\n",
@@ -23,49 +21,49 @@
     "start = pd.to_datetime('2020-12-01')\n",
     "end = pd.to_datetime('2020-12-30')\n",
     "random.seed(1234)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "users = pd.DataFrame({\"user_id\" : np.arange(1000, 1000+n_users)})"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "users[\"gender\"] = random.choices(genders, k=n_users)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "users[\"age\"] = random.choices(ages, k=n_users)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "users.to_csv('users.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
    "source": [
     "def get_lessons(subject):\n",
     "    with open('../../assets/courses/'+subject+'/'+subject+'/res/course.json') as f:\n",
@@ -90,26 +88,26 @@
     "        completion += 1/lessons[-1][2] * 1/details[lesson[2]]\n",
     "        ret_lessons.append((lesson[0], lesson[1], completion, lesson[3]/details[lesson[2]]))\n",
     "    return ret_lessons"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
    "source": [
     "def random_dates(start, end, n=10):\n",
     "    start_u = start.value//10**9\n",
     "    end_u = end.value//10**9\n",
     "\n",
     "    return pd.to_datetime(np.random.randint(start_u, end_u, n), unit='s').sort_values()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
    "source": [
     "def random_scores(user_id, subject, lessons):\n",
     "    n_scores = random.randint(50, len(lessons))\n",
@@ -124,45 +122,45 @@
     "    scores[\"score\"] = random.choices(np.arange(70, 100, 1), k=n_scores)\n",
     "    scores[\"datetime\"] = random_dates(start, end, n=n_scores)\n",
     "    return scores"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
    "source": [
     "subjects = {\n",
     "    'en': get_lessons('en'),\n",
     "    'maths': get_lessons('maths')\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 11,
+   "source": [
+    "len(subjects['en'])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "70"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
-   "source": [
-    "len(subjects['en'])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
    "source": [
     "df = None\n",
     "for row in users.itertuples():\n",
@@ -171,14 +169,19 @@
     "            df = random_scores(row[1], subject[0], subject[1])\n",
     "        else:\n",
     "            df = pd.concat([df, random_scores(row[1], subject[0], subject[1])])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 13,
+   "source": [
+    "df.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -218,8 +221,8 @@
        "      <td>0.016129</td>\n",
        "      <td>ambulance</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>87</td>\n",
-       "      <td>2020-12-01 11:01:21</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2020-12-01 09:33:18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -229,8 +232,8 @@
        "      <td>0.032258</td>\n",
        "      <td>anchor</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>85</td>\n",
-       "      <td>2020-12-01 11:43:56</td>\n",
+       "      <td>99</td>\n",
+       "      <td>2020-12-01 19:20:54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -240,8 +243,8 @@
        "      <td>0.048387</td>\n",
        "      <td>auto</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>90</td>\n",
-       "      <td>2020-12-01 17:01:05</td>\n",
+       "      <td>86</td>\n",
+       "      <td>2020-12-01 20:55:28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -251,8 +254,8 @@
        "      <td>0.064516</td>\n",
        "      <td>pram</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>78</td>\n",
-       "      <td>2020-12-02 06:38:38</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2020-12-02 02:56:58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -262,8 +265,8 @@
        "      <td>0.080645</td>\n",
        "      <td>bag</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>77</td>\n",
-       "      <td>2020-12-02 06:57:37</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2020-12-03 14:15:25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,37 +281,33 @@
        "4     1000      en    en02                      0.080645        bag   \n",
        "\n",
        "   chapter_completion_percentage  score            datetime  \n",
-       "0                            0.5     87 2020-12-01 11:01:21  \n",
-       "1                            1.0     85 2020-12-01 11:43:56  \n",
-       "2                            0.5     90 2020-12-01 17:01:05  \n",
-       "3                            1.0     78 2020-12-02 06:38:38  \n",
-       "4                            0.5     77 2020-12-02 06:57:37  "
+       "0                            0.5     73 2020-12-01 09:33:18  \n",
+       "1                            1.0     99 2020-12-01 19:20:54  \n",
+       "2                            0.5     86 2020-12-01 20:55:28  \n",
+       "3                            1.0     88 2020-12-02 02:56:58  \n",
+       "4                            0.5     95 2020-12-03 14:15:25  "
       ]
      },
-     "execution_count": 41,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df.to_csv('scores.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "'Python Interactive'",
-   "language": "python",
-   "name": "60c86c93-4195-4177-884d-93b259dfcad3"
+   "name": "python3",
+   "display_name": "Python 3.7.7 64-bit ('venv': venv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -321,6 +320,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "interpreter": {
+   "hash": "2151d9c5cc6057aac259c5a9e449338d27bb321fd739ea9360df39a8fd958345"
   }
  },
  "nbformat": 4,
