Added i18n for leaderboard

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -28,6 +28,8 @@
   "Achievements": "Achievements",
   "Add Teacher":"Add Teacher",
   "Age   :": "Age   :",
+  "All time": "All time",
+  "All time rank": "All time rank",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "Allie bought 2 boxes of mangos.\n Each box has 4 mangos.\n How many mangos did she buy?",
   "Amy walks 4 blocks to school. Jane walks 2 blocks to school. How many more blocks does Amy walk than Jane to school?":"Shilpa walks 4 kilometers to school. Jaya walks 2 kilometers to school. How many more kilometers does Shilpa walk than Jaya to school?",
   "Ana has 7 cookies. She eats 2 of them. How many cookies does she have left?":"Sakina has 7 cookies. She eats 2 of them. How many cookies does she have left?",
@@ -37,6 +39,7 @@
   "App Language :": "App Language :",
   "apples":"apples",  
   "Backgrounds": "Backgrounds",
+  "Back": "Back",
   "Begin Quiz": "Begin Quiz",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?":"Sonam has 13 flowers in her garden. Shreya has 8 flowers. How many more flowers does Sonam have than Shreya?",
   "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?":"Vikram has 2 marbles. Hemanth has 3 more marbles than Vikram. How many marbles does Hemanth have?",
@@ -57,6 +60,7 @@
   "Click x1 times on number x2!": "Click x1 times on number x2!",
   "cone":"cone",
   "Confirm": "Confirm",
+  "Connected": "Connected",
   "Contact Us": "Contact us",
   "Contact": "Contact",
   "Continue": "Continue",
@@ -135,6 +139,7 @@
   "Literacy": "Literacy",
   "Login": "Login",
   "Login to your school": "Login to your school",
+  "Logout": "Logout",
   "Remember logged in user": "Remember logged in user",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?":"Leela has 8 pencils. She loses 7 of them. How many pencils does Leela have left?", 
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?":"Leela is 9 years old. Her sister Julie is 6 years old. How much older is Leela than her sister Julie?",
@@ -254,6 +259,8 @@
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?":"There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?",
   "There are some coins in a jar. You collect 5 more coins and now have 10 coins in all. How many coins did you start with?":"There are some coins in a jar. You collect 5 more coins and now have 10 coins in all. How many coins did you start with?",
   "There were some seashells in Megan's pail. She finds 2 more seashells. Now she has 8 seashells in all. How many seashells did she start with?":"There were some seashells in Bindu's pail. She finds 2 more seashells. Now she has 8 seashells in all. How many seashells did she start with?",
+  "This week": "This week",
+  "This week rank": "This week rank",
   "Thomas has 2 goats on his farm. There are 6 more chickens than goats on his farm. How many chickens does he have?":"Thomas has 2 goats on his farm. There are 6 more chickens than goats on his farm. How many chickens does he have?",
   "three": "three",
   "Tim's dog gave birth to some puppies. Tim gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"Tinku's dog gave birth to some puppies. Tinku gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?",
