--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -28,6 +28,8 @@
   "Achievements": "उपलब्धियां",
   "Add Teacher":"शिक्षक",
   "Age   :": "आयु   :",
+  "All time": "पूरा समय",
+  "All time rank": "ऑल टाइम रैंक",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "आयशा ने आम के 2 बक्से खरीदे।\nप्रत्येक बक्से में 4 आम हैं।\nउसने कितने आम खरीदे?",
   "Amy walks 4 blocks to school. Jane walks 2 blocks to school. How many more blocks does Amy walk than Jane to school?":"आशा 4 किलोमीटर चल कर स्कूल जाती हैं।\nजय 2 किलोमीटर चल कर स्कूल जाता है।\nआशा स्कूल जाने के लिए जय से कितने अधिक किलोमीटर चलती है?",
   "Ana has 7 cookies. She eats 2 of them. How many cookies does she have left?":"गिरीश एक दुकान पर गया और कुछ टी-शर्ट खरीदी।\nवह दूसरे दुकान में गया और 2 और टी-शर्ट खरीदे।\nउसने कुल मिलाकर 7 टी-शर्ट खरीदीं।\nउसने पहली दुकान पर कितनी टी-शर्ट खरीदीं?",
@@ -37,6 +39,7 @@
   "App Language :": "ऐप भाषा :",
   "apples":"सेब",  
   "Assignments": "नियत कार्य",
+  "Back": "वापस",
   "Backgrounds": "पृष्ठभूमि",
   "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?":"भीम के बगीचे में 13 फूल हैं।\nकीर्ति केबगीचे में 8 फूल हैं।\nकीर्ति की तुलना में भीम के पास और कितने ज्यादा फूल हैं?",
@@ -58,6 +61,7 @@
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
   "cone":"शंकु",
   "Confirm": "पुष्टि करें",
+  "Connected": "जुड़े हुए",
   "Contact Us": "हमसे संपर्क करें",
   "Contact": "संपर्क करें",
   "Connected To Class": "वर्ग से जुड़े चुके है",
@@ -139,6 +143,7 @@
   "Literacy": "हिन्दी",
   "Login": "लॉग इन करें",
   "Login to your school": "अपने स्कूल में लॉगिन करें",
+  "Logout": "लॉग आउट",
   "Remember logged in user": "लॉग इन उपयोगकर्ता याद रखें",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?":"लतिका के पास 8 पेंसिल हैं।\nवह उनमें से 7 पेंसिल खो देती है।\nलतिका के पास कितने पेंसिल बचे हैं?",
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?":"लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
@@ -258,6 +263,8 @@
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?":"आसमान में 9 पतंगें उड़ रही हैं।\nएक हवा का झोंका 3 पतंगों को जमीन पर गिरा देती हैं।\nकितनी पतंगें अभी भी आसमान में उड़ रही हैं?",
   "There are some coins in a jar. You collect 5 more coins and now have 10 coins in all. How many coins did you start with?":"एक जार में कुछ झींगुर हैं।\nआप 5 और झींगुर लेते हैं और अब सभी में 10 झींगुर हैं।\nआपके पास कितने झींगुर थे शुरुआत में ?",
   "There were some seashells in Megan's pail. She finds 2 more seashells. Now she has 8 seashells in all. How many seashells did she start with?":"माही की टोकरी में कुछ फूल थे।\nउसे 2 फूल और मिले।\nअब उसके पास कुल मिलाकर 8 फूल हैं।\nशुरुआत में माहि के पास कितने फूल थे?",
+  "This week": "इस सप्ताह",
+  "This week rank": "इस सप्ताह रैंक",
   "Thomas has 2 goats on his farm. There are 6 more chickens than goats on his farm. How many chickens does he have?":"रुद्र के खेत में 2 बकरियां हैं।\nउसके खेत पर बकरियों की तुलना में 6 अधिक मुर्गियां हैं।\nउसके पास कितने मुर्गियां हैं?",
   "three": "तीन",
   "Tim's dog gave birth to some puppies. Tim gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?":"तेज के कुत्ते ने कुछ पिल्लों को जन्म दिया।\nतेज ने अपने दोस्तों को 6 पिल्ले दिए।\nअब उसके पास 2 पिल्ले बचे हैं।\nउनके कुत्ते ने कितने पिल्लों को जन्म दिया?",
