--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -28,6 +28,8 @@
   "Achievements": "उपलब्धी",
   "Add Teacher": "शिक्षकांचा प्रवेश ",
   "Age  :": "वय :",
+  "All time": "नेहमी",
+  "All time rank": "सर्व वेळ रँक",
   "Allie bought 2 boxes of mangos. Each box has 4 mangos. How many mangos did she buy?": "अलीने २ पेटी आंबे विकत घेतले. प्रत्येक पेटी मध्ये ४ आंबे आहेत. तिने एकूण किती आंबे विकत घेतले?",
   "Amy walks 4 blocks to school. Jane walks 2 blocks to school. How many more blocks does Amy walk than Jane to school?": "शिल्पा शाळेकडे ४ किलोमीटर चालत गेली. जया शाळेकडे २ किलोमीटर चालत गेला. जयाच्या तुलनेत शिल्पा शाळेकडे किती किलोमीटर जास्त चालली?",
   "Ana has 7 cookies. She eats 2 of them. How many cookies does she have left?": "सकिना कडे ७ बिस्किट आहेत. त्यामधील २ बिस्किटे तिने खाल्ली. आता तिच्याकडे किती बिस्किटे शिल्लक राहिली?",
@@ -37,6 +39,7 @@
   "App Language :": " ॲपची  भाषा :",
   "apples": "सफरचंदं",
   "Backgrounds": "पार्श्वभाग",
+  "Back": "मागे",
   "Begin Quiz": "प्रश्नमंजुषेची सुरुवात",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "सोनम च्या बगीच्यामध्ये १३ फुले आहेत. श्रेया जवळ ८ फुले आहेत. सोनम कडे श्रेया पेक्षा किती फुले जास्त असणार?",
   "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?": "विक्रम कडे २ गोट्या आहेत. हेमंत कडे विक्रम पेक्षा ३ गोट्या जास्त आहेत. हेमंत कडे एकूण किती गोट्या असतील?",
@@ -57,8 +60,10 @@
   "Click x1 times on number x2!": " नंबर x2 वर x1 एवढा  वेळा क्लिक करा.",
   "cone": "सुळका ",
   "Confirm": "ठाम",
+  "Connected": "जोडलेले",
   "Contact Us": "आमच्याशी संपर्क साधा ",
   "Contact": "संपर्क",
+  "Connected To Class": "वर्गाशी जोडलेले",
   "Continue": "चालू ",
   "Count and Match": "मोजा आणि जुळवा",
   "Count and Pair": "मोजा आणि जोडा",
@@ -132,6 +137,7 @@
   "Lena has 12 books. She donates 8 books to her class library. How many books does Lena have left?": " लीना कडे 12 पुस्तके आहेत. तिने तिच्या वर्गाच्या ग्रंथालयात आठ पुस्तके देऊन टाकली. तर आता तिच्याकडे किती पुस्तके  उरली?",
   "Library": " ग्रंथालय",
   "Literacy": " साक्षरता",
+  "Logout": "बाहेर पडणे",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?": "लीला कडे ८ पेन्सिल आहेत. तिच्याकडून ७ पेन्सिल हरवल्या. लीला कडे एकूण किती पेन्सिल शिल्लक राहिल्या?",
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?": "लीला चे वय ९ वर्ष आहे. तिची बहीण जुली ६ वर्षांची आहे. लीला तिच्या बहीण जुली पेक्षा किती वर्षाने मोठी असणार?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?": "सुधाने ८ कॅंडी आणि जयाने ९ कॅंडी विकत घेतल्या. दोघांनी मिळून एकूण किती कॅंडी विकत घेतल्या?",
@@ -250,6 +256,8 @@
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?": " आकाशात 9 पतंग उडत आहेत. वाऱ्यामुळे तीन पतंग जमिनीवर पडल्या. तर आत्ता  आकाशात किती पतंग उडत आहेत?",
   "There are some coins in a jar. You collect 5 more coins and now have 10 coins in all. How many coins did you start with?": " एका जार मध्ये काही  नाणी आहेत. तू अजून पाच नाणी मिळवली आणि आत्ता तुझ्याकडे एकूण 10 नाणी आहेत. तर सुरुवातीला तुझ्याकडे किती नाणी होती?",
   "There were some seashells in Megan's pail. She finds 2 more seashells. Now she has 8 seashells in all. How many seashells did she start with?": " बिंदूच्या बादलीमध्ये काही शंख-शिंपले आहेत. तिला अजून दोन शंख-शिंपले सापडले. आत्ता तिच्याकडे एकूण आठ शंखशिंपले आहेत. तर तिच्याकडे सुरुवातीला किती  शंख शिंपले होते?",
+  "This week": "या आठवड्यात",
+  "This week rank": "या आठवड्यात रँक",
   "Thomas has 2 goats on his farm. There are 6 more chickens than goats on his farm. How many chickens does he have?": " थॉमस कडे शेतामध्ये दोन मेंढ्या आहेत. त्याच्या शेतामध्ये मेंढ्या पेक्षा अजून जास्त सहा कोंबड्या आहेत. तर आत्ता त्याच्याकडे किती कोंबड्या आहेत?",
   "three": "तीन",
   "Tim's dog gave birth to some puppies. Tim gave 6 puppies to his friends. Now he has 2 puppies left. How many puppies did his dog give birth to?": " टिंकू च्या  कुत्र्याने काही पिल्लांना जन्म दिला.  टिंकू ने सहा पिल्ले त्याच्या मित्राला दिली. आता त्याच्याकडे दोन  पिल्ले  उरली. तर त्याच्या कुत्र्याने किती पिल्लांना जन्म दिला होता?",
