Changed otp dialog title
From

We sent an OTP to verify your number

To

Ask your teacher for the class code and enter it there

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -38,6 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?":"Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?",
   "App Language :": "App Language :",
   "apples":"apples",  
+  "Ask your teacher for the class code and enter it there": "Ask your teacher for the class code and enter it there",
   "Backgrounds": "Backgrounds",
   "Back": "Back",
   "Begin Quiz": "Begin Quiz",
