--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -38,6 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?":"अन्ना ने 12 पौधे खरीदे।\nउसकी बहन ने 7 पौधे खरीदे।\nअन्ना ने अपनी बहन से कितने अधिक पौधे खरीदे?",
   "App Language :": "ऐप भाषा :",
   "apples":"सेब",  
+  "Ask your teacher for the class code and enter it there": "अपने शिक्षक से कक्षा कोड मांगें और उसे वहां दर्ज करें",
   "Assignments": "नियत कार्य",
   "Back": "वापस",
   "Backgrounds": "पृष्ठभूमि",
