--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -38,6 +38,7 @@
     "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "ಗೋಪಿ 12 ಸಸ್ಯಗಳನ್ನು ಖರೀದಿಸಿದನು .ಅವನ ಸಹೋದರಿ 7 ಸಸ್ಯಗಳನ್ನು ಖರೀದಿಸಿದಳು .ತನ್ನ ಸಹೋದರಿಗಿಂತ ಗೋಪಿಯ ಬಳಿ ಎಷ್ಟು ಸಸ್ಯಗಳು ಜಾಸ್ತಿ ಇದ್ದವು ?",
     "App Language :": "ಅಪ್ಲಿಕೇಶನ್ ಭಾಷೆ:",
     "apples": "ಸೇಬು",
+    "Ask your teacher for the class code and enter it there": "ತರಗತಿ ಕೋಡ್‌ಗಾಗಿ ನಿಮ್ಮ ಶಿಕ್ಷಕರನ್ನು ಕೇಳಿ ಮತ್ತು ಅದನ್ನು ಅಲ್ಲಿ ನಮೂದಿಸಿ",
     "Backgrounds": "ಹಿನ್ನೆಲೆಗಳು",
     "Back": "ಹಿಂದೆ",
     "Begin Quiz": "ರಸಪ್ರಶ್ನೆ ಪ್ರಾರಂಭಿಸಿ",
