--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -38,6 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "अण्णाने १२ रोपटे विकत घेतली. त्याच्या बहिणीने ७ रोपटे विकत घेतली. अण्णाने त्याच्या बहिणीच्या तुलनेत किती रोपे जास्त विकत घेतली?",
   "App Language :": " ॲपची  भाषा :",
   "apples": "सफरचंदं",
+  "Ask your teacher for the class code and enter it there": "तुमच्या शिक्षकांना वर्ग कोड विचारा आणि तो तेथे एंटर करा",
   "Backgrounds": "पार्श्वभाग",
   "Back": "मागे",
   "Begin Quiz": "प्रश्नमंजुषेची सुरुवात",
