--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -81,7 +81,7 @@
   "Email :": "Email :",
   "Email": "Email",
   "English": "English",
-  "Enter the 6-digit otp here...": "Enter the 6-digit otp here...",
+  "Enter the 6-digit OTP here...": "Enter the 6-digit OTP here...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?":"Harish makes 5 paper airplanes. Naresh makes 14 paper airplanes. How many fewer paper airplanes does Harish make than Naresh?",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
