Change the order of the sticker book, changed Assignments indication icon and Fixes i18n issues

--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -39,7 +39,12 @@
   "App Language :": " ॲपची  भाषा :",
   "apples": "सफरचंदं",
   "Ask your teacher for the class code and enter it there": "तुमच्या शिक्षकांना वर्ग कोड विचारा आणि तो तेथे एंटर करा",
+  "Assignments": "असाइनमेंट",
   "Backgrounds": "पार्श्वभाग",
+  "Background\nCollection": "पार्श्वभूमी संग्रह",
+  "Background Collection": "पार्श्वभूमी संग्रह",
+  "Badges\nCollection": "बॅज संग्रह",
+  "Badges Collection": "बॅज संग्रह",
   "Back": "मागे",
   "Begin Quiz": "प्रश्नमंजुषेची सुरुवात",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "सोनम च्या बगीच्यामध्ये १३ फुले आहेत. श्रेया जवळ ८ फुले आहेत. सोनम कडे श्रेया पेक्षा किती फुले जास्त असणार?",
@@ -70,7 +75,10 @@
   "Count and Pair": "मोजा आणि जोडा",
   "cube": "घन",
   "cylinder": "वृत्तचित्ती",
+  "Character Modification": "वर्ण बदल",
+  "Character\nModification": "वर्ण बदल",
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?": "डेविड आणि त्याच्या मित्रांनी ९ पतंगे उडवली. त्यामधील काही पतंगे झाडामध्ये अडकली. ६ पतंगे अजूनही उडत आहेत. तर झाडांमध्ये एकूण किती पतंगे अडकली असणार?",
+  "Dairy Rewards": "डेअरी बक्षिसे",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "डीनाकडे फटाऊपेक्षा ५ कोडे जास्त आहेत. फटाऊकडे ३ कोडे आहेत. तर डीनाकडे एकूण किती कोडे आहेत?",
   "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "स्वामीच्या टोपलीमध्ये ११ आंबे आहेत. स्वामीने ४ आंबे बहिणीला दिले. तर टोपलीमध्ये एकूण किती आंबे शिल्लक राहिले असतील?",
   "Division": "भागाकार",
@@ -92,6 +100,7 @@
   "five": "पाच",
   "Follow Us": "आमचा पाठलाग करा ",
   "four": "चार ",
+  "Fun Game\nActivity": "मजेदार गेम\nक्रियाकलाप",
   "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?": "सिद्धूचे वय १२ वर्ष आहे. त्याचा भाऊ तुषार ८ वर्षांचा आहे. तर तुषार सिद्धूपेक्षा किती वर्षाने लहान असणार?",
   "Friends": "मित्र",
   "Gabby worked 4 more hours than Ian. Ian worked 8 hours. How many hours did Gabby work?": "गरिमाने इयानपेक्षा ४ तास जास्त काम केले. इयानने ८ तास काम केले. तर गरिमाने एकूण किती तास काम केले?",
@@ -184,6 +193,7 @@
   "Parent": "पालक ",
   "Parts and whole 2": "अंशत: आणि संपूर्ण २ ",
   "Parts and Whole": "अंशत: आणि संपूर्ण",
+  "Platformer game": "प्लॅटफॉर्मर खेळ",
   "Paul has 7 plums. Brian has 4 more plums than Paul. How many plums does Brian have?": "पंकज कडे ७ मनुके आहेत. कपिल कडे पंकजच्या तुलनेत ४ मनुके जास्त आहेत. कपिल कडे एकूण किती मनुके आहेत?",
   "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "प्रकाश कडे ४ गोट्या आहेत. साक्षीने काही गोट्या प्रकाशला दिल्या, आता प्रकाश जवळ एकूण ६ गोट्या आहेत. साक्षीने एकूण किती गोट्या प्रकाशला दिल्या?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "त्याने दुपारच्या जेवणानंतर किती पाने वाचली?",
@@ -223,6 +233,9 @@
   "square": "चौरस",
   "Stacie caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Stacie catch in all?": " अनिताला सकाळी पाच मासे मिळाले. तिला दुपारी अजून चार मासे मिळाले. तर  अनिताला एकूण किती मासे मिळाले?",
   "stars": "तारे",
+  "Story\nReading": "कथा वाचन",
+  "Sticker Books": "स्टिकर पुस्तके",
+  "Sticker\nPainting": "स्टिकर पेंटिंग",
   "Stringed objects": "तंतुवाद्य वस्तु ",
   "Succession in Shapes": "आकारांमधले उत्तराधिकार",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": " शिमोना ला समुद्रकिनाऱ्यावर 20 शंख शिंपले सापडली.  नदिरा ला सहा शंख-शिंपले सापडली.  तर  सिमोना ला नदिरा पेक्षा किती शंख-शिंपले जास्त सापडली?",
