--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -43,7 +43,9 @@
   "Back": "वापस",
   "Backgrounds": "पृष्ठभूमि",
   "Background Collection": "पृष्ठभूमि संग्रह",
+  "Background\nCollection": "पृष्ठभूमि संग्रह",
   "Badges Collection": "बैज संग्रह",
+  "Badges\nCollection": "बैज संग्रह",
   "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "भीम के बगीचे में 13 फूल हैं।\nकीर्ति केबगीचे में 8 फूल हैं।\nकीर्ति की तुलना में भीम के पास और कितने ज्यादा फूल हैं?",
   "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?": "बाला के पास 2 मार्बल हैं।\nआर्यन के पास बाला से 3 अधिक मार्बल हैं।\nआर्यन के पास कितने मार्बल हैं?",
@@ -75,6 +77,7 @@
   "cube": "घनक्षेत्र",
   "cylinder": "सिलेंडर",
   "Character Modification": "चरित्र संशोधन",
+  "Character\nModification": "चरित्र संशोधन",
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?": "ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
   "Dairy Rewards": "डेयरी पुरस्कार",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
@@ -98,6 +101,7 @@
   "five": "पांच",
   "Follow Us": "हमें फॉलो करें",
   "four": "चार",
+  "Fun Game\nActivity": "मजेदार खेल\nगतिविधि",
   "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?": "फैजल 12 साल का है।\nउसका भाई तुषार 8 साल का है।\nतुषार फैजल से कितना छोटा है?",
   "Friends": "पात्र",
   "Featured": "प्रदर्शित",
@@ -194,6 +198,7 @@
   "Parent": "माता-पिता",
   "Parts and whole 2": "पूरा और हिस्सा",
   "Parts and Whole": "हिस्सा और पूरा",
+  "Platformer game": "प्लेटफ़ॉर्मर गेम",
   "Paul has 7 plums. Brian has 4 more plums than Paul. How many plums does Brian have?": "पंकज के पास 7 प्लम हैं। पंकज की तुलना में कपिल के पास 4 और प्लम हैं। कपिल के पास कितने प्लम हैं?",
   "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "प्रतीक के पास 4 मार्बल हैं।\nशमीन प्रतीक को कुछ मार्बल देता है और अब उसके पास 6 मार्बल बाकी हैं।\nशामीन ने प्रतीक को कितने मार्बल दिए थे?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "प्रतिक ने भोजन से पहले किताब के 6 पन्ने पढ़े।\nभोजन के बाद उन्होंने कुछ और पन्ने पढ़ा।\nअगर प्रतिक कुल मिलाकर 9 पन्ने पढ़ते हैं  तो भोजन के बाद उन्होंने कितने पन्ने पढ़े?",
@@ -234,8 +239,9 @@
   "Stacie caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Stacie catch in all?": "सीमा ने सुबह 5 मछलियाँ पकड़ीं।\nउसने दोपहर में 4 \nऔर मछलियाँ पकड़ीं।\nसीमा ने कुल मिलाकर कितनी मछलियाँ पकड़ीं?",
   "stars": "स्टार",
   "Stringed objects": "आकार की माला",
-  "Story Reading": "कहानी पढ़ना",
-  "Sticker Painting": "स्टिकर पेंटिंग",
+  "Story\nReading": "कहानी पढ़ना",
+  "Sticker Books": "स्टिकर पुस्तकें",
+  "Sticker\nPainting": "स्टिकर पेंटिंग",
   "Succession in Shapes": "आकार आयोजन",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
   "tables": "टेबल",
