--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -41,7 +41,11 @@
     "Ask your teacher for the class code and enter it there": "ತರಗತಿ ಕೋಡ್‌ಗಾಗಿ ನಿಮ್ಮ ಶಿಕ್ಷಕರನ್ನು ಕೇಳಿ ಮತ್ತು ಅದನ್ನು ಅಲ್ಲಿ ನಮೂದಿಸಿ",
     "Assignments": "ನಿಯೋಜನೆ",
     "Backgrounds": "ಹಿನ್ನೆಲೆಗಳು",
+    "Background Collection": "ಹಿನ್ನೆಲೆ ಸಂಗ್ರಹ",
+    "Background\nCollection": "ಹಿನ್ನೆಲೆ ಸಂಗ್ರಹ",
     "Back": "ಹಿಂದೆ",
+    "Badges Collection": "ಬ್ಯಾಡ್ಜ್‌ಗಳ ಸಂಗ್ರಹ",
+    "Badges\nCollection": "ಬ್ಯಾಡ್ಜ್‌ಗಳ\nಸಂಗ್ರಹ",
     "Begin Quiz": "ರಸಪ್ರಶ್ನೆ ಪ್ರಾರಂಭಿಸಿ",
     "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "ಬೆತ್ ಉದ್ಯಾನದಲ್ಲಿ 13 ಹೂವುಗಳು ಇದ್ದವು ಹಾಗು ಕೇಟ್ ನ ಉದ್ಯಾನದಲ್ಲಿ8  ಹೂವುಗಳು ಇದ್ದವು.ಬೆತ್ ಬಳಿ ಕೇಟ್ ಗಿಂತ ಎಷ್ಟು ಹೂವುಗಳು ಜಾಸ್ತಿ ಇದ್ದವು?",
     "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?": "ಬಿಲ್ಲಿಯ ಬಳಿ 2 ಗೋಲಿಗಳು ಇವ. ಆಡ್ರೆಯ ಬಳಿ ಬಿಳ್ಳಿಗಿಂತ 3 ಹೆಚ್ಚು ಗೋಲಿಗಳಿವೆ. ಆಡ್ರೆಯ ಬಳಿ ಎಷ್ಟು ಗೋಲಿಗಳು ಇವೆ ",
@@ -72,7 +76,10 @@
     "Create User": "ಬಳಕೆದಾರರನ್ನು ರಚಿಸಿ",
     "cube": "ಕ್ಯೂಬ್",
     "cylinder": "ಸಿಲಿಂಡರ್",
+    "Character Modification": "ಅಕ್ಷರ ಮಾರ್ಪಾಡು",
+    "Character\nModification": "ಅಕ್ಷರ ಮಾರ್ಪಾಡು",
     "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?": "ಡೇವಿಡ್ ಮತ್ತು ಅವನ ಸ್ನೇಹಿತರು 9 ಗಾಳಿಪಟಗಳನ್ನು ಹಾರಿಸುತ್ತಾರೆ.ಕೆಲವು ಗಾಳಿಪಟಗಳು ಮರದೊಳಗೆ ಅಂಟಿಕೊಳ್ಳುತ್ತವೆ  ,6 ಗಾಳಿಪಟಗಳು ಇನ್ನೂ ಹಾರುತ್ತಿರುತ್ತವೆ ಹಾಗಾದರೆ ಎಷ್ಟು ಗಾಳಿಪಟಗಳು ಮರದಲ್ಲಿ ಸಿಲುಕಿಕೊಂಡಿವವೆ?",
+    "Dairy Rewards": "ಡೈರಿ ಬಹುಮಾನಗಳು",
     "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "ಡೀಯಾನಾಗೆ ಸೀತಾಗಿಂತ 5 ಜಾಸ್ತಿ ಪಧಬಂಧಗಳಿವೆ .ಸೀತಾಗೆ 3 ಪದಬಂಧಗಲಿದ್ದರೆ  ಡೀಯಾನಾಗೆ ಎಷ್ಟು ಪಧಬಂಧಗಳಿವೆ?",
     "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ 11 ಮಾವಿನಹಣ್ಣುಗಳಿವೆ. ಡಿಯಾಗೋ ತನ್ನ ಸಹೋದರಿಗೆ 4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು ನೀಡುತ್ತಾಳೆ ಈಗ ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳಿವೆ ?",
     "Division": "ವಿಭಜನೆ",
@@ -95,6 +102,7 @@
     "five": "ಐದು",
     "Follow Us": "ನಮ್ಮನ್ನು ಅನುಸರಿಸಿ",
     "four": "ನಾಲ್ಕು",
+    "Fun Game\nActivity": "ಮೋಜಿನ ಆಟ\nಚಟುವಟಿಕೆ",
     "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?": "ರಾಮನ ವಯಸ್ಸು12 ವರ್ಷ ಮತ್ತು ಅವನ ಸಹೋದರ ಸೋಮನಿಗೆ 8 ವರ್ಷ. ರಾಮನಿಗಿಂತ ಸೋಮ ಎಷ್ಟು ವರ್ಷ ಚಿಕ್ಕವನು?",
     "Friends": "ಸ್ನೇಹಿತರು",
     "Gabby worked 4 more hours than Ian. Ian worked 8 hours. How many hours did Gabby work?": "ಗ್ಯಾಬಿ ಇಯಾನ್ಗಿಂತ 4 ಗಂಟೆ ಜಾಸ್ತಿ ಕೆಲಸ ಮಾಡುತ್ತಾನೆ, ಇಯಾನ್ 8 ಗಂಟೆ ಕೆಲಸ ಮಾಡಿದರೆ.ಗ್ಯಾಬಿ ಎಷ್ಟು ಗಂಟೆ ಕೆಲಸ ಮಾಡಿದನು?",
@@ -189,6 +197,7 @@
     "Parent": "ಪೋಷಕ",
     "Parts and whole 2": "ಭಾಗಗಳು ಮತ್ತು ಇಡೀ 2",
     "Parts and Whole": "ಭಾಗಗಳು ಮತ್ತು ಸಂಪೂರ್ಣ",
+    "Platformer game": "ಪ್ಲಾಟ್‌ಫಾರ್ಮರ್ ಆಟ",
     "Paul has 7 plums. Brian has 4 more plums than Paul. How many plums does Brian have?": "ಪಾಲ್ಗೆ 7 ಪ್ಲಮ್ಗಳಿವೆ.ಬ್ರಿಯಾನ್ ಪಾಲ್ಗಿಂತ 4 ಹೆಚ್ಚು ಪ್ಲಮ್ಗಳನ್ನು ಹೊಂದಿದ್ದಾರೆ.ಬ್ರಿಯಾನ್ ಎಷ್ಟು ಪ್ಲಮ್ಗಳನ್ನು ಹೊಂದಿದ್ದಾನೆ ?",
     "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "ಪೀಟರ್ ಬಳಿ 4 ಪೆನ್ಸಿಲ್ ಇದೆ. ಥಾಮಸ್ ಅವನಿಗೆ ಕೆಲವು ಪೆನ್ಸಿಲ್ ಕೊಡುತ್ತಾನೆ . ಈಗ ಅವನ ಬಳಿ 6 ಪೆನ್ಸಿಲ್ ಇದೆ . ಥಾಮಸ್ ಪೀಟರ್ ಗೆ  ಎಷ್ಟು ಪೆನ್ಸಿಲ್ ಕೊಟ್ಟನು ?",
     "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "ಊಟಕ್ಕೆ ಮುಂಚೆ ಪೀಟರ್ ತನ್ನ ಪುಸ್ತಕದ 6 ಪುಟಗಳನ್ನು  ಓದುತ್ತಾನೆ .ಊಟದ ನಂತರ ಅವನು  ಸ್ವಲ್ಪ ಹೆಚ್ಚು ಓದುತ್ತಾನೆ .ಪೀಟರ್ ಎಲ್ಲಾ ಸೇರಿ 9 ಪುಟಗಳನ್ನು ಓದಿದಲ್ಲಿ, ಊಟದ ನಂತರ ಅವನು ಎಷ್ಟು ಪುಟಗಳನ್ನು ಓದಿದನು?",
@@ -229,6 +238,9 @@
     "square": "ಚದರ",
     "Stacie caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Stacie catch in all?": "ರೊಸಿ ಬೆಳಿಗ್ಗೆ 5 ಮೀನುಗಳನ್ನು ಹಿಡಿದಳು .ಅವರು ಮಧ್ಯಾಹ್ನ 4 ಮೀನುಗಳನ್ನು ಹಿಡಿದಳು .ರೊಸಿ  ಒಟ್ಟಾಗಿ ಎಷ್ಟು ಮೀನುಗಳನ್ನು  ಹಿಡಿದಳು ?",
     "stars": "ನಕ್ಷತ್ರಗಳು",
+    "Story\nReading": "ಕಥೆ ಓದುವಿಕೆ",
+    "Sticker Books": "ಸ್ಟಿಕ್ಕರ್ ಪುಸ್ತಕಗಳು",
+    "Sticker\nPainting": "ಸ್ಟಿಕ್ಕರ್ ಪೇಂಟಿಂಗ್",
     "Stringed objects": "ತಂತಿ ವಸ್ತುಗಳು",
     "Succession in Shapes": "ಆಕಾರಗಳಲ್ಲಿ ಅನುಕ್ರಮ",
     "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "ಸಿಡ್ನಿಗೆ  ಸಮುದ್ರತೀರದಲ್ಲಿ 20 ಚಿಪ್ಪುಗಳು   ಸಿಗುತ್ತದೆ .ನೋವಾಗೆ  6 ಚಿಪ್ಪುಗಳು   ಸಿಗುತ್ತದೆ . ನೋವಾಗಿಂತ ಸಿಡ್ನಿಗೆ  ಎಷ್ಟು ಚಿಪ್ಪುಗಳು ಜಾಸ್ತಿ  ಸಿಕ್ಕಿದೆ ?",
